--- a/content/reading/05-reading.html
+++ b/content/reading/05-reading.html
@@ -11,9 +11,13 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 
 <h3 id="required">Required</h3>
 <ul>
-<li><a href="https://r4ds.had.co.nz/">Chapter 5 for Data Science: Basics</a></li>
+<li><p><a href="https://r4ds.had.co.nz/">Chapter 5 for Data Science: Basics</a></p></li>
+<li><p>We will revisit our breast cancer transcriptomic dataset <span class="math inline">\({\tt brca\_small}\)</span>.</p></li>
 </ul>
 <h3 id="recommended-reading">Recommended Reading</h3>
+<ul>
+<li>If you didn’t have time previously to explore TCGA, perhaps take a look at the <a href="https://www.cancer.gov/about-nci/organization/ccg/research/structural-genomics/tcga">project</a> now.</li>
+</ul>
 <h3 id="deeper-insight">Deeper insight</h3>
 <ul>
 <li><a href="https://dplyr.tidyverse.org/">dplyr tutorial</a></li>
@@ -21,5 +25,5 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 </ul>
 <h3 id="action-items">Action items</h3>
 <ul>
-<li>You might investigate the code in Project L05 at RStudio Cloud and explore the Tara Oceans dataset.</li>
+<li>You might investigate the code in Project L05 at RStudio Cloud.</li>
 </ul>
