--- a/public/reading/05-reading/index.html
+++ b/public/reading/05-reading/index.html
@@ -139,9 +139,13 @@
 
 <h3 id="required">Required</h3>
 <ul>
-<li><a href="https://r4ds.had.co.nz/">Chapter 5 for Data Science: Basics</a></li>
+<li><p><a href="https://r4ds.had.co.nz/">Chapter 5 for Data Science: Basics</a></p></li>
+<li><p>We will revisit our breast cancer transcriptomic dataset <span class="math inline">\({\tt brca\_small}\)</span>.</p></li>
 </ul>
 <h3 id="recommended-reading">Recommended Reading</h3>
+<ul>
+<li>If you didn’t have time previously to explore TCGA, perhaps take a look at the <a href="https://www.cancer.gov/about-nci/organization/ccg/research/structural-genomics/tcga">project</a> now.</li>
+</ul>
 <h3 id="deeper-insight">Deeper insight</h3>
 <ul>
 <li><a href="https://dplyr.tidyverse.org/">dplyr tutorial</a></li>
@@ -149,7 +153,7 @@
 </ul>
 <h3 id="action-items">Action items</h3>
 <ul>
-<li>You might investigate the code in Project L05 at RStudio Cloud and explore the Tara Oceans dataset.</li>
+<li>You might investigate the code in Project L05 at RStudio Cloud.</li>
 </ul>
 
 
@@ -213,6 +217,17 @@
     </footer>
 
     
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+      }
+    });
+    </script>
+    <script async type="text/javascript"
+      src="https://cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+
 
 </div>
 </body>
