--- a/content/video/00-video.html
+++ b/content/video/00-video.html
@@ -9,4 +9,4 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><a href="https://youtu.be/nTLpqeHFc4c">Lecture 00 at Youtube</a></p>
+<p><a href="https://youtu.be/Md7QhHd1PHc">Lecture 00 at Youtube</a></p>
