--- a/public/video/00-video/index.html
+++ b/public/video/00-video/index.html
@@ -137,7 +137,7 @@
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><a href="https://youtu.be/Md7QhHd1PHc">Lecture 00 at Youtube</a></p>
+<p><a href="https://youtu.be/xwfEMGJ4Ijw">Lecture 00 at Youtube</a></p>
 
 
     </article>
