--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -148,11 +148,11 @@
 <span class="fake-li"><i class="fa fa-rebel" aria-hidden="true"></i><a href="private"> RStudio Cloud</a></span><br>
 <br>
 <span class="fake-header">Labs</span><br>
-<span class="fake-li"><i class="fa fa-user" aria-hidden="true"></i><a href="https://mikehallett.science"> TBA</a></span><br>
-<span class="fake-li"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:x@gmail.com"> x@gmail.com</a></span><br>
+<span class="fake-li"><i class="fa fa-user" aria-hidden="true"></i><a href="https://mikehallett.science"> Aki Kirbizakis</a></span><br>
+<span class="fake-li"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:e.kirbizakis@gmail.com"> e.kirbizakis@gmail.com</a></span><br>
 <span class="fake-li"><i class="fa fa-clock-o" aria-hidden="true"></i> Tu 10:15-11:30</span><br>
 <span class="fake-li"><i class="fa fa-university" aria-hidden="true"></i><a href="https://concordia-ca.zoom.us/s/8992285958#success"> Zoom</a></span><br>
-<span class="fake-li"><i class="fa fa-question-circle" aria-hidden="true"></i> Office TBA</span><br>
+<span class="fake-li"><i class="fa fa-question-circle" aria-hidden="true"></i> TBA</span><br>
 
 <br />
 <br />
