--- a/content/video/00-video.html
+++ b/content/video/00-video.html
@@ -10,4 +10,4 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 
 
 <p><a href="https://youtu.be/Md7QhHd1PHc">Lecture 00 at Youtube</a></p>
-<p><a href="http://csfg-algonquin.concordia.ca/~hallett/Discussions/D00-Discussion.mp4">Lecture 00 at my server</a></p>
+<p><a href="http://csfg-algonquin.concordia.ca/~hallett/Discussions/D00-Discussion.mp4">Discussion 00 at my server</a></p>
