--- a/public/video/00-video/index.html
+++ b/public/video/00-video/index.html
@@ -138,7 +138,7 @@
 
 
 <p><a href="https://youtu.be/Md7QhHd1PHc">Lecture 00 at Youtube</a></p>
-<p><a href="http://csfg-algonquin.concordia.ca/~hallett/Discussions/D00-Discussion.mp4">Lecture 00 at my server</a></p>
+<p><a href="http://csfg-algonquin.concordia.ca/~hallett/Discussions/D00-Discussion.mp4">Discussion 00 at my server</a></p>
 
 
     </article>
