--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -152,7 +152,7 @@
 <span class="fake-li"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:e.kirbizakis@gmail.com"> e.kirbizakis@gmail.com</a></span><br>
 <span class="fake-li"><i class="fa fa-clock-o" aria-hidden="true"></i> Tu 10:15-11:30</span><br>
 <span class="fake-li"><i class="fa fa-university" aria-hidden="true"></i><a href="https://concordia-ca.zoom.us/s/8992285958#success"> Zoom</a></span><br>
-<span class="fake-li"><i class="fa fa-question-circle" aria-hidden="true"></i> TBA</span><br>
+<span class="fake-li"><i class="fa fa-question-circle" aria-hidden="true"></i> Wed 10-11</span><br>
 
 <br />
 <br />
