--- a/content/video/03-video.html
+++ b/content/video/03-video.html
@@ -9,4 +9,4 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><a href="https://youtu.be/ZF-ZZhR0UKE">Lecture 03 at Youtube: Breast Cancer Transcriptomes</a></p>
+<p><a href="https://youtu.be/8iLoIZ0tF4s">Lecture 03 at Youtube: Breast Cancer Transcriptomes</a></p>
