--- a/public/video/03-video/index.html
+++ b/public/video/03-video/index.html
@@ -137,7 +137,7 @@
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><a href="https://youtu.be/ZF-ZZhR0UKE">Lecture 03 at Youtube: Breast Cancer Transcriptomes</a></p>
+<p><a href="https://youtu.be/8iLoIZ0tF4s">Lecture 03 at Youtube: Breast Cancer Transcriptomes</a></p>
 
 
     </article>
