--- a/static/slides/04-slides.html
+++ b/static/slides/04-slides.html
@@ -476,6 +476,13 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>We don’t cover all the basics of programming here. Just a few key concepts.</li>
 </ul>
 </section>
+<section>
+<section id="action-items" class="title-slide slide level1">
+<h1>Action Items</h1>
+<ul>
+<li>Solve the swap problem discussed in the lecture.</li>
+</ul>
+</section>
 <section id="points-of-reflection" class="slide level2">
 <h2>Points of Reflection</h2>
 <ul>
@@ -492,7 +499,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <figure>
 <img data-src="images/apple-touch-icon-114x114.png" alt="" /><figcaption>Computational Biology Concordia</figcaption>
 </figure>
-</section>
+</section></section>
     </div>
   </div>
 
