--- a/content/reading/03-reading.html
+++ b/content/reading/03-reading.html
@@ -11,7 +11,7 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 
 <h3 id="required">Required</h3>
 <ul>
-<li><p><a href="https://r4ds.had.co.nz/explore-intro.html">Chapter 3 R for Data Science: Introduction</a></p></li>
+<li><p><a href="https://r4ds.had.co.nz/data-visualisation.html">Chapter 3 R for Data Science: Introduction</a></p></li>
 <li><p><a href="https://www.youtube.com/watch?v=CZeN-IgjYCo">Sequencing by Synthesis</a></p></li>
 <li><p><a href="https://www.youtube.com/watch?v=mI0Fo9kaWqo">Sequencing by Synthesis (more background including DNA chemistry)</a></p></li>
 </ul>
