--- a/public/reading/03-reading/index.html
+++ b/public/reading/03-reading/index.html
@@ -139,7 +139,7 @@
 
 <h3 id="required">Required</h3>
 <ul>
-<li><p><a href="https://r4ds.had.co.nz/explore-intro.html">Chapter 3 R for Data Science: Introduction</a></p></li>
+<li><p><a href="https://r4ds.had.co.nz/data-visualisation.html">Chapter 3 R for Data Science: Introduction</a></p></li>
 <li><p><a href="https://www.youtube.com/watch?v=CZeN-IgjYCo">Sequencing by Synthesis</a></p></li>
 <li><p><a href="https://www.youtube.com/watch?v=mI0Fo9kaWqo">Sequencing by Synthesis (more background including DNA chemistry)</a></p></li>
 </ul>
