--- a/public/slides/04-slides.html
+++ b/public/slides/04-slides.html
@@ -471,7 +471,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <ul>
 <li>Our goal is to cover some very fundamental concepts underlying how data is represented and manipulated in R.</li>
 <li>Lecture 04 will be carried out directly in RStudio Cloud.</li>
-<li>This suits the material and also gives me a chance to show you some tricks with RStudio.</li>
+<li>This suites the material and also gives me a chance to show you some tricks with RStudio.</li>
 <li>The code and data I use today in in the <span class="math inline">\({\tt examples}\)</span> and <span class="math inline">\({\tt data}\)</span> folders in RStudio project L04.</li>
 <li>We don’t cover all the basics of programming here. Just a few key concepts.</li>
 </ul>
