--- a/content/class/08-class.html
+++ b/content/class/08-class.html
@@ -32,5 +32,9 @@ output:
 <ul>
 <li><p>What advantages are there for data scientists if there is a single data structure like the <span class="math inline">\({\tt tibble}\)</span>?</p></li>
 <li><p>Do a bit of archaelogy and figure out what this ancient <span class="math inline">\({\tt data.frame}\)</span> is.</p></li>
-<li><p>Would science be better served if there were more standardized ways of making data and metadata available?</p></li>
+<li><p>Would science be better served if there were more standardized ways of making data and metadata available? (I’m considering Sunagawa et al’s approach here.)</p></li>
+<li><p>What is an OTU? What is a 97% OTU?</p></li>
+<li><p>What is a prokaryote?</p></li>
+<li><p>What are the filter sizes used by Tara Oceans?</p></li>
+<li><p>Why is filtering important?</p></li>
 </ul>
